[gd_scene load_steps=5 format=2]

[ext_resource path="res://TransitionScreen.gd" type="Script" id=1]
[ext_resource path="res://fonts/Christopher Done.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "Fade In"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.0980392 ), Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 0.294118 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0.490196 ), Color( 1, 1, 1, 0.588235 ), Color( 1, 1, 1, 0.686275 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 0.882353 ), Color( 1, 1, 1, 1 ) ]
}

[node name="TransitionScreen" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.62598
margin_top = 0.625977
margin_right = -1.62598
margin_bottom = 0.625977
color = Color( 0, 0, 0, 0 )
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color( 1, 0.945098, 0.909804, 1 )
margin_left = 201.626
margin_top = 49.374
margin_right = 849.0
margin_bottom = 345.374
size_flags_horizontal = 2
custom_fonts/normal_font = SubResource( 1 )
text = "Chapter Zero

The None Pitch"
scroll_active = false
scroll_following = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Fade In" = SubResource( 2 )

[node name="TextHoldTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="SetScenePlayingTimer" type="Timer" parent="."]
wait_time = 2.5
